update seq & sam & log

--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -15,14 +15,8 @@ source_cpp =	../utils/files/file_reader.cpp \
 		   		../utils/files/file_writer.cpp \
 		   		../utils/files/gzstream.cpp \
 				../utils/log/log.cpp\
-				../utils/log/logfilter.cpp\
-				../utils/log/timetools.cpp\
 				../utils/string/stringtools.cpp\
 				../utils/args/argsparser.cpp\
-		   		../utils/sam/sam_parser.cpp\
-				../utils/seq/fasta.cpp\
-				../utils/seq/fastq.cpp\
-				../utils/seq/seq.cpp\
                 ../utils/agp/agp.cpp\
 				../utils/misc/contigIndex.cpp\
 				../utils/misc/TagId.cpp\
@@ -45,17 +39,11 @@ BinCluster : clean ${BinCluster_o} ${source_o} ../bin
 	${CXX} ${BinCluster_o} ${source_o} ${DEUBG_CXX} -o BinCluster
 	mv $@ ../bin/
 
-
-
-
 ChopBin_cpp = ChopBin.cpp
 ChopBin_o = ChopBin.o
 ChopBin : clean ${ChopBin_o} ${source_o} ../bin
 	${CXX} ${ChopBin_o} ${source_o} ${DEUBG_CXX} -o ChopBin
 	mv $@ ../bin/
-
-
-
 
 FillTrunkByPE_cpp = FillTrunkByPE.cpp
 FillTrunkByPE_o = FillTrunkByPE.o
@@ -63,17 +51,11 @@ FillTrunkByPE : clean ${FillTrunkByPE_o} ${source_o} ../bin
 	${CXX} ${FillTrunkByPE_o} ${source_o} ${DEUBG_CXX} -o FillTrunkByPE
 	mv $@ ../bin/
 
-
-
-
 FakeSOAPContig_cpp = FakeSOAPContig.cpp
 FakeSOAPContig_o = FakeSOAPContig.o
 FakeSOAPContig : clean ${FakeSOAPContig_o} ${source_o} ../bin
 	${CXX} ${FakeSOAPContig_o} ${source_o} ${DEUBG_CXX} -o FakeSOAPContig
 	mv $@ ../bin/
-
-
-
 
 GapSize_cpp = GapSize.cpp
 GapSize_o = GapSize.o
@@ -81,17 +63,11 @@ GapSize : clean ${GapSize_o} ${source_o} ../bin
 	${CXX} ${GapSize_o} ${source_o} ${DEUBG_CXX} -o GapSize
 	mv $@ ../bin/
 
-
-
-
 MST_cpp = MST.cpp
 MST_o = MST.o
 MST : clean ${MST_o} ${source_o} ../bin
 	${CXX} ${MST_o} ${source_o} ${DEUBG_CXX} -o MST
 	mv $@ ../bin/
-
-
-
 
 Orientation_cpp = Orientation.cpp
 Orientation_o = Orientation.o
@@ -99,17 +75,11 @@ Orientation : clean ${Orientation_o} ${source_o} ../bin
 	${CXX} ${Orientation_o} ${source_o} ${DEUBG_CXX} -o Orientation
 	mv $@ ../bin/
 
-
-
-
 ParseReadName_cpp = ParseReadName.cpp
 ParseReadName_o = ParseReadName.o
 ParseReadName : clean ${ParseReadName_o} ${source_o} ../bin
 	${CXX} ${ParseReadName_o} ${source_o} ${DEUBG_CXX} -o ParseReadName
 	mv $@ ../bin/
-
-
-
 
 PEGraph_cpp = PEGraph.cpp
 PEGraph_o = PEGraph.o
@@ -117,17 +87,11 @@ PEGraph : clean ${PEGraph_o} ${source_o} ../bin
 	${CXX} ${PEGraph_o} ${source_o} ${DEUBG_CXX} -o PEGraph
 	mv $@ ../bin/
 
-
-
-
 Sam2ReadOnContig_cpp = Sam2ReadOnContig.cpp
 Sam2ReadOnContig_o = Sam2ReadOnContig.o
 Sam2ReadOnContig : clean ${Sam2ReadOnContig_o} ${source_o} ../bin
 	${CXX} ${Sam2ReadOnContig_o} ${source_o} ${DEUBG_CXX} -o Sam2ReadOnContig
 	mv $@ ../bin/
-
-
-
 
 ScaffInfo2Seq_cpp = ScaffInfo2Seq.cpp
 ScaffInfo2Seq_o = ScaffInfo2Seq.o
@@ -135,17 +99,11 @@ ScaffInfo2Seq : clean ${ScaffInfo2Seq_o} ${source_o} ../bin
 	${CXX} ${ScaffInfo2Seq_o} ${source_o} ${DEUBG_CXX} -o ScaffInfo2Seq
 	mv $@ ../bin/
 
-
-
-
 SeedCluster_cpp = SeedCluster.cpp
 SeedCluster_o = SeedCluster.o
 SeedCluster : clean ${SeedCluster_o} ${source_o} ../bin
 	${CXX} ${SeedCluster_o} ${source_o} ${DEUBG_CXX} -o SeedCluster
 	mv $@ ../bin/
-
-
-
 
 SplitInfo_cpp = SplitInfo.cpp
 SplitInfo_o = SplitInfo.o
@@ -153,17 +111,11 @@ SplitInfo : clean ${SplitInfo_o} ${source_o} ../bin
 	${CXX} ${SplitInfo_o} ${source_o} ${DEUBG_CXX} -o SplitInfo
 	mv $@ ../bin/
 
-
-
-
 StaticsticUnique_cpp = StaticsticUnique.cpp
 StaticsticUnique_o = StaticsticUnique.o
 StaticsticUnique : clean ${StaticsticUnique_o} ${source_o} ../bin
 	${CXX} ${StaticsticUnique_o} ${source_o} ${DEUBG_CXX} -o StaticsticUnique
 	mv $@ ../bin/
-
-
-
 
 Trunk2ScaffInfo_cpp = Trunk2ScaffInfo.cpp
 Trunk2ScaffInfo_o = Trunk2ScaffInfo.o
@@ -171,10 +123,7 @@ Trunk2ScaffInfo : clean ${Trunk2ScaffInfo_o} ${source_o} ../bin
 	${CXX} ${Trunk2ScaffInfo_o} ${source_o} ${DEUBG_CXX} -o Trunk2ScaffInfo
 	mv $@ ../bin/
 
-
 jobs_o=  ${BinCluster_o} ${ChopBin_o} ${FillTrunkByPE_o} ${FakeSOAPContig_o} ${GapSize_o} ${MST_o} ${Orientation_o} ${ParseReadName_o} ${PEGraph_o} ${Sam2ReadOnContig_o} ${ScaffInfo2Seq_o} ${SeedCluster_o} ${SplitInfo_o} ${StaticsticUnique_o} ${Trunk2ScaffInfo_o}
-
-dirty	   =${jobs_o} ${jobs} ${source_o}
 
 unittest_cpp = ../utils/string/stringtools_test.cpp \
 			   ../utils/agp/agp_test.cpp \
@@ -183,17 +132,12 @@ unittest_cpp = ../utils/string/stringtools_test.cpp \
 			   ../utils/files/file_test.cpp \
 			   ../utils/incr_array/incr_array_test.cpp \
 			   ../utils/interval/Interval_test.cpp \
-			   ../utils/linear_fitting/Minimum_multiplication_test.cpp \
-			   ../utils/log/timetools_test.cpp \
-			   ../utils/sam/sam_parser_test.cpp \
-			   ../utils/seq/fasta_test.cpp \
-			   ../utils/seq/fastq_test.cpp \
-			   ../utils/seq/seq_test.cpp \
+			   ../utils/linear_fitting/Linear_test.cpp \
+			   ../utils/multithread/MultiThread_test.cpp \
+			   ../utils/log/log_test.cpp \
 
-#			   ../utils/multithread/
 #			   ../utils/graph/
 #			   ../utils/misc/
-
 
 
 unittest_o		= ${unittest_cpp:%.cpp=%.o}
@@ -206,6 +150,8 @@ test : clean ${test_o} ${source_o} ${unittest_o} ../bin
 
 ../bin:
 	mkdir -p ../bin
+
+dirty	   =${jobs_o} ${jobs} ${source_o} ${unittest_o} test.o
 
 clean:
 	rm -rf ${dirty}
