bug : update example/conf.ini

--- a/example/conf.ini
+++ b/example/conf.ini
@@ -27,7 +27,7 @@ PREFIX="scaffold_1.soap"                        # the prefix of you contig/Conti
 ###############################################################################
 # Control parameter settings 
 #
-
+SAMPLING_RATIO=1.0
 ###################################################
 # for step 1 bwa mem
 BWA_K=53                                    # the mapping k-value for bwa
